--- a/style.css
+++ b/style.css
@@ -8,3 +8,19 @@ body{
     color:white;
     background-color: black;
 }
+
+footer{
+    background: #2f2f2f;
+    width: 100%;
+    height: 20%;
+    padding: 2rem;
+    display: flex;
+}
+
+
+.footer_sx,
+.footer_mid,
+.footer_dx {
+    border: 2px dashed green;
+    width: calc(100% / 3 - 10px);
+}
