Added: main section

--- a/style.css
+++ b/style.css
@@ -8,3 +8,20 @@ body{
     color:white;
     background-color: black;
 }
+
+.container{
+    width: 1000px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card{
+    width: 600px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
